# LightningBug

./: .gitignore  Makefile  README.md  pyproject.toml
bug/: align_text.py
bug/line_align/: align.py  char_sub_matrix.py
