[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "LightningBug"
version = "0.0.1"
readme = "README.md"
description = ""
license = { file = "LICENSE" }
authors = [{ name = "Raphael LaFrance", email = "raphael.lafrance@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "Jinja2",
    "accelerate",
    "datasets",
    "dspy",
    "dspy-ai",
    "evaluate",
    "ftfy",
    "imagesize",
    "ipywidgets",
    "jupyterlab",
    "levenshtein",
    "open-webui",
    "pandas",
    "pillow",
    "regex",
    "rich",
    "tqdm",
    "transformers",
]
optional-dependencies.dev = [
    "build",
    "pre-commit",
    "pre-commit-hooks",
    "ruff",
    "ruff-lsp",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bug"]
namespaces = false

[project.scripts]

[tool.setuptools]
py-modules = []

[tool.ruff]
target-version = "py312"

show-fixes = true

lint.select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "D",
    "E",
    "EM",
    "EXE",
    "F",
    "FA",
    "FBT",
    "FIX",
    "FLY",
    # "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "INT",
    "ISC",
    # "LOG",  # flake8-logging
    "N",
    "NPY",
    "PD",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "T20",
    "TCH",
    "TD",
    "TID",
    "TRY",
    "UP",
    "W",
]

lint.ignore = [
    "A003",    # Class attribute is shadowing a Python builtin
    "ARG002",  # Unused method argument
    "COM812",  # Trailing comma missing
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in public method
    "D107",    # Missing docstring in public __init__
    "D203",    # 1 blank line required before class docstring
    "D212",    # Multi-line docstring summary should start at the first line
    "EM102",   # f-string-in-exception
    "FIX002",  # Line contains TODO
    "G004",    # Logging statement uses f-string
    "ISC001",  # Implicitly concatenated string literals on one line
    "N818",    # Exception name {name} should be named with an Error suffix
    "PD901",   # Avoid using the generic variable name df for DataFrames
    "PLR0913", # Too many arguments in function definition ({c_args} > {max_args})
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
    "PLW0603", # Using the global statement to update {name} is discouraged
    "PLW2901", # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
    "PT009",   # Use a regular assert instead of unittest-style {assertion}
    "RET504",  # Unnecessary assignment to {name} before return statement
    "RUF001",  # String contains ambiguous {}. Did you mean {}?
    "S603",    # subprocess call: check for execution of untrusted input
    "S608",    # Possible sql ingection vector through string-based query construction
    "SIM114",  # Combine if branches using logical or operator
    "SIM117",  # Use a single with statement with multiple contexts instead of nested with statements
    # "SIM905",  # split-static-string
    "SLF001", # Private member accessed: {access}
    "T201",   # print found
    "TD002",  # Missing author in TODO
    "TD003",  # Missing issue link on the line following this TODO
]
